--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NYC Devs - NYC's Fastest Growing Developer Slack Group</title>
+  <title>Carolina Code Club - Coding workshops for students in the Raleigh - Durham area.</title>
   <link rel="shortcut icon" href="../img/fav_icon.png" type="image/x-icon" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a class="navbar-item" href="../">
-            <h3>NYC Devs</h3>
+            <h3>Carolina Code Club</h3>
           </a>
           <span class="navbar-burger burger" data-target="navbarMenu">
             <span></span>
@@ -47,9 +47,9 @@
             <div class="tabs is-right">
               <ul>
                 <li class="is-active"><a href="/">Home</a></li>
-                <li><a href="http://www.twitter.com/nycdevs">Twitter</a></li>
-                <li><a href="http://www.github.com/nycdevs">Github</a></li>
-                <li><a href="mailto:nycdevs@gmail.com">Email</a></li>
+                <li><a href="http://www.twitter.com/carolinacodeclub">Twitter</a></li>
+                <li><a href="http://www.github.com/carolinacodeclub">Github</a></li>
+                <li><a href="mailto:carolinacodeclub@gmail.com">Email</a></li>
               </ul>
             </div>
           </div>
@@ -61,13 +61,15 @@
     <div class="container has-text-centered">
       <div class="column is-4 is-offset-4">
         <figure class="image">
-          <img src="img/nycdevs.png" alt="NYC Devs logo" />
+          <img src="img/code-club-logo.jpg" alt="Carolina Code Club logo" />
         </figure>
+      </div>
+      <div class="column is-6 is-offset-3">
         <h1 class="title">
-          Welcome To NYC Devs
+          Welcome To Carolina Code Club!
         </h1>
         <h2 class="subtitle is-4">
-          We are ~2000 developers learning, networking and talking code in NYC.
+          Coding workshops for high school students in the Triangle.
         </h2>
       </div>
     </div>
@@ -83,19 +85,7 @@
                   autofocus="">
               </div>
             </div>
-            <div class="field">
-              <div class="control">
-                <input name="found-us" class="input is-large" type="text" required="true"
-                  placeholder="How'd you find us?">
-              </div>
-            </div>
-            <div class="field">
-              <label class="checkbox">
-                <input type="checkbox" required="true">
-                I agree to the follow the <a href="/code-of-conduct" target="_blank">Code of Conduct</a>
-              </label>
-            </div>
-            <button type="submit" class="button is-block is-info is-large is-fullwidth">Join On Slack</button>
+            <button type="submit" class="button is-block is-info is-large is-fullwidth">Notify Me When Classes Open</button>
           </form>
         </div>
       </div>
@@ -104,21 +94,11 @@
   <section id="footer" class="section">
     <div class="tabs is-centered">
       <ul>
-        <li>&copy NYC Devs</li>
+        <li>&copy Carolina Code Club</li>
       </ul>
     </div>
   </section>
   <script src="js/bulma.js"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145056948-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-    gtag("config", "UA-145056948-1");
-  </script>
 </body>
 
 </html>
