--- a/thank-you.html
+++ b/thank-you.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NYC Devs - NYC's Fastest Growing Developer Slack Group</title>
+  <title>Carolina Code Club - Coding workshops for students in the Raleigh - Durham area.</title>
   <link rel="shortcut icon" href="../img/fav_icon.png" type="image/x-icon" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://unpkg.com/bulma@0.7.5/css/bulma.min.css" />
   <style>
     .section {
-      padding: 0.5rem;
+      padding: .5rem;
     }
 
     .image {
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a class="navbar-item" href="../">
-            <h3>NYC Devs</h3>
+            <h3>Carolina Code Club</h3>
           </a>
           <span class="navbar-burger burger" data-target="navbarMenu">
             <span></span>
@@ -47,9 +47,9 @@
             <div class="tabs is-right">
               <ul>
                 <li class="is-active"><a href="/">Home</a></li>
-                <li><a href="http://www.twitter.com/nycdevs">Twitter</a></li>
-                <li><a href="http://www.github.com/nycdevs">Github</a></li>
-                <li><a href="mailto:nycdevs@gmail.com">Email</a></li>
+                <li><a href="http://www.twitter.com/carolinacodeclub">Twitter</a></li>
+                <li><a href="http://www.github.com/carolinacodeclub">Github</a></li>
+                <li><a href="mailto:carolinacodeclub@gmail.com">Email</a></li>
               </ul>
             </div>
           </div>
@@ -57,19 +57,19 @@
       </div>
     </nav>
   </section>
-  <section id="thanks" class="section">
+  <section id="intro" class="section">
     <div class="container has-text-centered">
       <div class="column is-4 is-offset-4">
         <figure class="image">
-          <img src="img/nycdevs.png" alt="NYC Devs logo" />
+          <img src="img/code-club-logo.jpg" alt="Carolina Code Club logo" />
         </figure>
+      </div>
+      <div class="column is-6 is-offset-3">
         <h1 class="title">
-          Sweet! You're In!
+          Thank you for your interest!
         </h1>
-        <h2 class="subtitle">Click Below To Register</h2>
-        <h2 class="subtitle">
-          <a
-            href="https://join.slack.com/t/nycdevs/shared_invite/enQtNzA5MDEwNzExODI4LTBjOTFkMWI1MjUxNjQ0NWY1MjdkZjE1YzY2N2IzMmNiODhkZTM2NDVmOWNjMDQwN2M0NDc0YTU0OWUzNzI3MDg">https://join.slack.com/t/nycdevs/shared_invite/enQtNzA5MDEwNzExODI4LTBjOTFkMWI1MjUxNjQ0NWY1MjdkZjE1YzY2N2IzMmNiODhkZTM2NDVmOWNjMDQwN2M0NDc0YTU0OWUzNzI3MDg</a>
+        <h2 class="subtitle is-4">
+          We'll be in touch shortly.
         </h2>
       </div>
     </div>
@@ -77,22 +77,11 @@
   <section id="footer" class="section">
     <div class="tabs is-centered">
       <ul>
-        <li>&copy NYC Devs</li>
+        <li>&copy Carolina Code Club</li>
       </ul>
     </div>
   </section>
   <script src="js/bulma.js"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145056948-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-    gtag("config", "UA-145056948-1");
-  </script>
 </body>
 
 </html>
