--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   autofocus="">
               </div>
             </div>
-            <button type="submit" class="button is-block is-info is-large is-fullwidth">Notify Me When Classes Open</button>
+            <button type="submit" class="button is-block is-info is-large is-fullwidth">Notify Me!</button>
           </form>
         </div>
       </div>
